syntax = "proto3";

option go_package = "github.com/begonia-org/begonia/example/api/v1";
option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package helloworld;

import "google/api/annotations.proto";
import "google/protobuf/descriptor.proto";

// The greeting service definition.
// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
    option (google.api.http)={
		post:"/api/v1/example/helloworld"
		body:"*"
	};
  }
    rpc SayHelloGet (HelloRequest) returns (HelloReply) {
    option (google.api.http)={
		get:"/api/v1/example/helloworld"
	};
  }

  rpc SayHelloStreamReply (HelloRequest) returns (stream HelloReply) {
    option (google.api.http) = {
        get: "/api/v1/example/helloworld/server/stream"
      };

  }

  rpc SayHelloStreamSend (stream HelloRequest) returns ( HelloReply) {
    option (google.api.http) = {
        post: "/api/v1/example/helloworld/client/stream"
        body: "*"
      };

  }
  rpc SayHelloBidiStream (stream HelloRequest) returns (stream HelloReply) {
    option (google.api.http) = {
        get: "/api/v1/example/helloworld/stream"
      };
  }
}

// The request message containing the user's name.
message HelloRequest {
  string msg = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
enum EnumAllow {
  ALLOW = 0;
  DENY = 1;
}
message ExampleMessage {
  string message = 1;
  int32 code = 2;
  double float_num = 3;
  bytes byte_data = 4;
  bool bool_data = 5;
  EnumAllow allow = 6;
  repeated int64 repeated_data = 7;
  fixed64 fixed_data = 8;
  sfixed64 sfixed_data = 9;
  sfixed32 sfixed32_data = 10;
  fixed32 fixed32_data = 11;
}